--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -18,7 +18,7 @@ jobs:
 
     steps:
       - name: Wait for Web Service 
-        run:  wait-for-webserver.sh
+        run:  /bin/sh wait-for-webserver.sh
       
       - name: Checkout repository
         uses: actions/checkout@v3
